# finbot

./: .gitignore  .gitignore.production  CLAUDE.md  PERFORMANCE.md  PRODUCTION_SETUP.md  README.md  ROADMAP.md  analyze_banamex.py  analyze_banorte.py  analyze_liverpool.py  check_db.py  environment.yml  pyproject.toml  requirements.txt  setup.py  test_classification.py  test_llm.py  validate_e2e.sh
config/: settings.yaml
data/inbox/: README.md
docs/: Architecture.md  CATEGORIES.md  FAQ.md  USAGE_GUIDE.md
fin/: __init__.py  cli.py  cli_classify.py  cli_correct.py
fin/alerts/: __init__.py  detector.py
fin/analysis/: __init__.py  subscriptions.py
fin/classification/: __init__.py  classifier.py  llm_classifier.py  rules.py
fin/config/: rules.yaml
fin/export/: __init__.py  exporter.py
fin/extractors/: __init__.py  banamex.py  banorte.py  base.py  bbva.py  detector.py  hsbc.py  liverpool.py
fin/models/: __init__.py  database.py  installment.py  merchant.py  processing_log.py  statement.py  transaction.py
fin/rag/: __init__.py  calculations.py  chat_engine.py  guardrails.py  prompts.py  retrieval.py
fin/reports/: __init__.py  commitments.py  merchant_profiles.py  monthly_summary.py
fin/utils/: __init__.py  dates.py  duplicates.py  money.py  text.py
fin/vectorization/: __init__.py  embeddings.py  index_pipeline.py  vector_store.py
scripts/: verify_data.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_full_pipeline.py
tests/test_models/: test_database.py
tests/test_utils/: test_dates.py  test_money.py  test_text.py
(+1 files in other folders)
